--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2>Get In Touch</h2>
           <h3>Can we be a help to each other?</h3>
           <p class="contact-msg">Contact me by clicking to the following links.</p>
-          <a class="btn" href="mailto:jayasinghpkjp@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:jayasinghpkjp@gmail.com">CONTACT ME</a>
         </div>
       </div>
       <br>
@@ -90,7 +90,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/jaya-singh-056387227/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/jayasingh_14?t=0EgpWVahjni3ORcJCmdDtQ&s=08">Twitter</a>
         <a class="footer-link" href="https://instagram.com/jayasingh14_?igshid=YmMyMTA2M2Y=">Instagram</a>
-        <p class="copyright">© 2003 Jaya Singh</p>
+        <p class="copyright">© 2022 Jaya Singh</p>
       </div>
 
 </body>
