--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaya Singh</title>
+    <title>Rajat Rokde</title>
     <link rel="stylesheet" href="styles.css">
    
    
@@ -13,7 +13,7 @@
 <body>
     <div class="top-container">
         <img class="topcloud" src="images/circle.png" alt="cloud">
-        <h1>Jaya Singh</h1>
+        <h1>Rajat Rokde</h1>
         <p>1st Year Undergraduate Student</p>
         <img class="bottomcloud" src="images/circle.png" alt="cloud">
     </div>
@@ -22,7 +22,7 @@
         <div class="profile">
           <img class="jaya" src="images/jaya.png" alt="jaya">
           <h2 class="hey">Hey!</h2>
-          <p class="intro">I am a first year student at RCOEM Nagpur, exploring and learning new productive things in my freshman year. I am a hardworker also a team player.</p>
+          <p class="intro">I am a mca student at vmv collage  Nagpur, exploring and learning new productive things in my freshman year. I am a hardworker also a team player.</p>
         </div>
         <hr>
         <div class="skills">
@@ -32,6 +32,7 @@
             <h3>Programming</h3>
             <ul>
               <li> I have can solve problems in languages like C and C++.</li>
+              <li> I done my devops as freshers</li>
               <li> I am presently learning dsa and competitive programming in C++. </li>
               <li>I have learned HTML and CSS and presently learning Bootstrap and Javascript for frontend webdevelopment.</li>
             </ul>
@@ -90,7 +91,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/jaya-singh-056387227/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/jayasingh_14?t=0EgpWVahjni3ORcJCmdDtQ&s=08">Twitter</a>
         <a class="footer-link" href="https://instagram.com/jayasingh14_?igshid=YmMyMTA2M2Y=">Instagram</a>
-        <p class="copyright">© 2022 Jaya Singh</p>
+        <p class="copyright">© 2022 Rajat Rokde</p>
       </div>
 
 </body>
