--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="middle-container">
         <div class="profile">
-          <img class="jaya" src="images/jaya.png" alt="jaya">
+          <img class="jaya" src="images/jaya.jpg" alt="jaya">
           <h2 class="hey">Hey!</h2>
           <p class="intro">I am a mca student at vmv collage  Nagpur, exploring and learning new productive things in my freshman year. I am a hardworker also a team player.</p>
         </div>
