--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-container">
         <img class="topcloud" src="images/circle.png" alt="cloud">
         <h1>Rajat Rokde</h1>
-        <p>1st Year Undergraduate Student</p>
+        <p>mca master graduate Student</p>
         <img class="bottomcloud" src="images/circle.png" alt="cloud">
     </div>
 
